<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.dariawan</groupId>
    <artifactId>java14-examples</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>
    <inceptionYear>2020</inceptionYear>

    <name>java14-examples</name>
    <url>http://maven.apache.org</url>

    <properties>
        <java.version>1.14</java.version>
        <maven.compiler.source>1.14</maven.compiler.source>
        <maven.compiler.target>1.14</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <guava.version>29.0-jre</guava.version>
        <jsoup.version>1.11.3</jsoup.version>
        <javax.activation.version>1.2.0</javax.activation.version>
        <jaxb.api.version>2.3.0</jaxb.api.version>
        <lombok.version>1.18.6</lombok.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>${jsoup.version}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.sun.activation/javax.activation -->
        <dependency>
            <groupId>com.sun.activation</groupId>
            <artifactId>javax.activation</artifactId>
            <version>${javax.activation.version}</version>
        </dependency>
        
        <!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
        <dependency>
            <groupId>javax.xml.bind</groupId>
            <artifactId>jaxb-api</artifactId>
            <version>${jaxb.api.version}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-core -->
        <dependency>
            <groupId>com.sun.xml.bind</groupId>
            <artifactId>jaxb-core</artifactId>
            <version>${jaxb.api.version}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-impl -->
        <dependency>
            <groupId>com.sun.xml.bind</groupId>
            <artifactId>jaxb-impl</artifactId>
            <version>${jaxb.api.version}</version>
        </dependency>
        
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
    
    <build>
        <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.8.0</version>
            <configuration>
                <release>14</release>
                <compilerArgs>
                    <arg>--enable-preview</arg>
                    <arg>--add-modules</arg>
                    <arg>jdk.incubator.foreign</arg>
                </compilerArgs>
            </configuration>
        </plugin>
            <plugin>
                <inherited>false</inherited>
                <groupId>com.google.code.maven-license-plugin</groupId>
                <artifactId>maven-license-plugin</artifactId>
                <version>1.4.0</version>
                <configuration>
                    <header>NOTICE</header>
                    <failIfMissing>true</failIfMissing>
                    <aggregate>true</aggregate>
                    <properties>
                        <owner>Dariawan</owner>
                        <year>${project.inceptionYear}</year>
                        <email>hello@dariawan.com</email>
                    </properties>
                    <excludes>
                        <exclude>.hg/**</exclude>
                        <exclude>.git/**</exclude>
                        <exclude>.gitignore/**</exclude>
                        <exclude>jenkins-jobs-configuration/**</exclude>
                        <exclude>LICENSE</exclude>
                        <exclude>NOTICE</exclude>
                        <exclude>README.md</exclude>
                        <exclude>**/Servers/**</exclude>
                        <exclude>**/src/test/resources/**</exclude>
                        <exclude>**/src/test/data/**</exclude>
                        <exclude>.git/**</exclude>
                        <exclude>**/.metadata/**</exclude>
                        <exclude>**/.idea/**</exclude>
                        <exclude>**/logs/**</exclude>
                        <exclude>**/js/**</exclude>
                        <exclude>**/css/**</exclude>
                        <exclude>**/src/main/resources/**</exclude>
                        <exclude>**/src/main/java/com/dariawan/jdk14/jfr/**</exclude>
                        <exclude>**/nb-configuration.xml</exclude>
                        <exclude>**/nbactions.xml</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>check-headers</id>
                        <phase>verify</phase>
                        <goals>
                            <!--<goal>check</goal>-->
                            <goal>format</goal>
                            <!--<goal>remove</goal>-->
                        </goals>
                    </execution>
                </executions>
            </plugin>                        
        </plugins>
    </build>
</project>
